Remove import button

--- a/konga/assets/js/app/consumers/index.html
+++ b/konga/assets/js/app/consumers/index.html
@@ -7,12 +7,12 @@
         <i class="mdi mdi-plus"></i>
         Create consumer
       </button>
-      <button
-        ng-if="user.hasPermission($state.name.split('.')[0],'create')"
-        class="btn btn-warning" ng-click="importConsumers()" data-ng-disabled="importClick">
-        <i class="mdi mdi-upload"><i class="material-icons"></i></i>
-        Import
-      </button>
+      <!--<button-->
+        <!--ng-if="user.hasPermission($state.name.split('.')[0],'create')"-->
+        <!--class="btn btn-warning" ng-click="importConsumers()" data-ng-disabled="importClick">-->
+        <!--<i class="mdi mdi-upload"><i class="material-icons"></i></i>-->
+        <!--Import-->
+      <!--</button>-->
     </div>
     <list-search
       class="pull-right"
