--- a/konga/assets/js/app/settings/index.html
+++ b/konga/assets/js/app/settings/index.html
@@ -1,4 +1,4 @@
-<form name="applicationSettingsForm" ng-submit="updateKongaSettings()">
+<form name="applicationSettingsForm" ng-submit="updateKongaSettings(applicationSettingsForm.$valid)">
   <!-- GENERAL SETTINGS -->
   <div class="row">
     <div class="col-md-12">
@@ -9,13 +9,13 @@
       <hr>
       <div class="row">
         <div class="col-md-4">
-          <div class="form-group">
+          <div class="form-group" ng-class="{'has-error' : applicationSettingsForm.info_polling_interval.$invalid && (applicationSettingsForm.info_polling_interval.$dirty || applicationSettingsForm.$submitted)}">
             <label>
               Dashboard refresh interval
             </label>
-            <input type="number" class="form-control" data-ng-model="KONGA_CONFIG.info_polling_interval">
-            <p class="help-block">The interval in milliseconds at which the Dashboard data will refresh. If set to 0,
-              polling will be disabled.</p>
+            <input type="number" name="info_polling_interval" required class="form-control" data-ng-model="KONGA_CONFIG.info_polling_interval" min="3000">
+            <p class="help-block">The interval in milliseconds at which the Dashboard data will refresh.</p>
+            <div class="text-danger" ng-if="applicationSettingsForm.info_polling_interval.$invalid && (applicationSettingsForm.info_polling_interval.$dirty || applicationSettingsForm.$submitted)"> Minimum interval value is 3000.</div>
           </div>
         </div>
         <div class="col-md-4">
@@ -35,7 +35,7 @@
               Logout session timeout
             </label>
             <input type="number" class="form-control" data-ng-model="KONGA_CONFIG.session_id_lifetime">
-            <p class="help-block">The interval in minutes at which you will be logged out after idle time</p>
+            <p class="help-block">The interval in minutes at which you will be logged out after idle time.</p>
           </div>
         </div>
       </div>
