--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -219,7 +219,7 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" data-ng-show="false">
       <label class="col-sm-4 control-label">Token Auth Alg<br><em>
         <small class="help-block">optional</small>
       </em></label>
