--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -154,7 +154,7 @@
       <div class="col-sm-7">
         <input ng-model="data.oxd_id" class="form-control" data-ng-disabled="!!data.id">
         <p class="help-block">If you have existing oxd entry then enter oxd_id(also client id, client secret and client id of oxd id). If you
-          have client created from OP server then skip it and enter only below client_id and client_secret. </p>
+          have client created from OP server then skip it and enter only below client_id and client_secret. <code>If you skip all three fields (oxd_id, client_id and client_secret), then it will create a new client for you.</code></p>
       </div>
     </div>
 
