--- a/konga/assets/js/app/consumers/credentials/oauth2.html
+++ b/konga/assets/js/app/consumers/credentials/oauth2.html
@@ -20,14 +20,14 @@
       <th>#</th>
       <th>name</th>
       <th>oxd id</th>
-      <th>client id</th>
+      <th>oxd client id</th>
       <th></th>
     </tr>
     <tr data-ng-repeat="cred in oauth2_credentials.data | orderBy : created_at : true">
       <td width="1">{{$index+1}}.</td>
       <th>{{cred.name}}</th>
       <th class="no-wrap">{{cred.oxd_id}}</th>
-      <th class="no-wrap"><a href title="Click to view client id" data-ng-click="showClientId(cred.client_id)">...{{cred.client_id.substring(cred.client_id.lastIndexOf("."), cred.client_id.length)}}</a></th>
+      <th class="no-wrap"><a href title="Click to view client id" data-ng-click="showClientId(cred.client_id_of_oxd_id)">...{{cred.client_id_of_oxd_id.substring(cred.client_id_of_oxd_id.lastIndexOf("."), cred.client_id_of_oxd_id.length)}}</a></th>
       <td class="no-wrap">
         <button type="button" ng-click="createOAuth2(cred)" class="btn btn-success btn-link">
           <i class="mdi mdi-pencil"></i>
