--- a/konga/assets/js/app/dashboard/dashboard.html
+++ b/konga/assets/js/app/dashboard/dashboard.html
@@ -59,6 +59,14 @@
               <td>{{globalInfo.oxdId}}</td>
             </tr>
             <tr>
+              <th>OXD Client Id</th>
+              <td><span data-ng-show="isShowOXDClientId">{{globalInfo.oxdClientId}}</span>
+                <a href data-ng-click="isShowOXDClientId = !isShowOXDClientId" title="{{isShowOXDClientId ? 'Hide': 'Show'}}">
+                  <i class="mdi mdi-eye"></i>
+                </a>
+              </td>
+            </tr>
+            <tr>
               <th>Client Id</th>
               <td><span data-ng-show="isShowClientId">{{globalInfo.clientId}}</span>
                 <a href data-ng-click="isShowClientId = !isShowClientId" title="{{isShowClientId ? 'Hide': 'Show'}}">
