Change oxd client title #154

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -158,12 +158,12 @@
       </div>
     </div>
 
-    <div class="form-group" data-ng-if="!data.id">
+    <div class="form-group">
       <label class="col-sm-4 control-label">Client Id<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input ng-model="data.client_id" class="form-control">
+        <input ng-model="data.client_id" class="form-control" data-ng-disabled="!!data.id">
         <p class="help-block">If you have existing client then add value in Client Id and Client Secret.</p>
       </div>
     </div>
@@ -178,12 +178,12 @@
       </div>
     </div>
 
-    <div class="form-group" data-ng-if="!data.id">
+    <div class="form-group">
       <label class="col-sm-4 control-label">Client Id of oxd id<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input ng-model="data.client_id_of_oxd_id" class="form-control">
+        <input ng-model="data.client_id_of_oxd_id" class="form-control" data-ng-disabled="!!data.id">
         <p class="help-block">If you have existing oxd id then add value in Client Id of oxd id.</p>
       </div>
     </div>
