--- a/konga/assets/js/app/dashboard/dashboard.html
+++ b/konga/assets/js/app/dashboard/dashboard.html
@@ -59,7 +59,7 @@
               <td>{{globalInfo.oxdId}}</td>
             </tr>
             <tr>
-              <th>OXD Client Id</th>
+              <th>Client Id of OXD Id</th>
               <td><span data-ng-show="isShowOXDClientId">{{globalInfo.oxdClientId}}</span>
                 <a href data-ng-click="isShowOXDClientId = !isShowOXDClientId" title="{{isShowOXDClientId ? 'Hide': 'Show'}}">
                   <i class="mdi mdi-eye"></i>
