--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -179,7 +179,7 @@
     </div>
 
     <div class="form-group">
-      <label class="col-sm-4 control-label">Client Id of oxd id<br><em>
+      <label class="col-sm-4 control-label">Client Id of OXD Id<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
