Add and update client credential #154

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -152,7 +152,7 @@
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input ng-model="data.oxd_id" class="form-control" data-ng-disabled="!!data.id">
+        <input ng-model="data.oxd_id" class="form-control">
         <p class="help-block">If you have existing oxd entry then enter oxd_id(also client id, client secret and client id of oxd id). If you
           have client created from OP server then skip it and enter only below client_id and client_secret. <code>If you skip all three fields (oxd_id, client_id and client_secret), then it will create a new client for you.</code></p>
       </div>
@@ -163,12 +163,12 @@
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input ng-model="data.client_id" class="form-control" data-ng-disabled="!!data.id">
+        <input ng-model="data.client_id" class="form-control">
         <p class="help-block">If you have existing client then add value in Client Id and Client Secret.</p>
       </div>
     </div>
-
-    <div class="form-group" data-ng-if="!data.id">
+    <!-- In add mode -->
+    <div class="form-group" data-ng-show="!data.id">
       <label class="col-sm-4 control-label">Client secret<br><em>
         <small class="help-block">optional</small>
       </em></label>
@@ -177,13 +177,23 @@
         <p class="help-block">If you have existing client then add value in Client Id and Client Secret.</p>
       </div>
     </div>
+    <!-- In edit mode -->
+    <div class="form-group" data-ng-show="!!data.id">
+      <label class="col-sm-4 control-label">Client secret<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="edit_client_secret" class="form-control">
+        <p class="help-block">If you enter new client secret then it will update with given value.</p>
+      </div>
+    </div>
 
     <div class="form-group">
       <label class="col-sm-4 control-label">Client Id of OXD Id<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7">
-        <input ng-model="data.client_id_of_oxd_id" class="form-control" data-ng-disabled="!!data.id">
+        <input ng-model="data.client_id_of_oxd_id" class="form-control">
         <p class="help-block">If you have existing oxd id then add value in Client Id of oxd id.</p>
       </div>
     </div>
