Update text and handle validation on name fields #160 #157

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -17,14 +17,14 @@
 </div>
 
 <div class="modal-body" id="modal-body">
-  <form class="form-horizontal">
-    <div class="form-group" ng-class="{'has-error' : errors.name}">
+  <form class="form-horizontal" name="oauthForm">
+    <div class="form-group" ng-class="{'has-error' : oauthForm.name.$invalid && (oauthForm.name.$dirty || oauthForm.$submitted)}">
       <label class="col-sm-4 control-label">name <br><em>
         <small class="help-block">required</small>
       </em></label>
       <div class="col-sm-7">
-        <input ng-model="data.name" class="form-control">
-        <div class="text-danger" ng-if="errors.name" data-ng-bind="errors.name"></div>
+        <input ng-model="data.name" name="name" class="form-control" required>
+        <div class="text-danger" ng-if="oauthForm.name.$invalid && (oauthForm.name.$dirty || oauthForm.$submitted)" data-ng-bind="Name is required"></div>
         <p class="help-block">A descriptive name used by the OAuth AS</p>
       </div>
     </div>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="form-group">
-      <label class="col-sm-4 control-label">Restrict API's<br><em>
+      <label class="col-sm-4 control-label">Restrict APIs<br><em>
         <small class="help-block">optional</small>
       </em></label>
       <div class="col-sm-7 check-toggle">
@@ -116,10 +116,10 @@
           data-ng-disabled="!data.restrict_api"
           class="btn btn-primary btn-sm pull-right">
           <i class="mdi mdi-plus"></i>
-          Select restricted API's
+          Select restricted APIs
         </button>
         <p class="help-block">
-          The client can only call specified API's if client restriction is enabled.
+          The client can only call specified APIs if client restriction is enabled.
         </p>
       </div>
     </div>
@@ -244,7 +244,7 @@
 
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-7">
-        <button type="submit" class="btn btn-primary" ng-click="manage()">
+        <button type="submit" class="btn btn-primary" ng-click="manage(oauthForm.$valid)">
           <i class="mdi mdi-check"></i>
           Submit
         </button>
