Handle form validation #160

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -17,14 +17,14 @@
 </div>
 
 <div class="modal-body" id="modal-body">
-  <form class="form-horizontal" name="oauthForm">
+  <form class="form-horizontal" name="oauthForm" novalidate>
     <div class="form-group" ng-class="{'has-error' : oauthForm.name.$invalid && (oauthForm.name.$dirty || oauthForm.$submitted)}">
       <label class="col-sm-4 control-label">name <br><em>
         <small class="help-block">required</small>
       </em></label>
       <div class="col-sm-7">
         <input ng-model="data.name" name="name" class="form-control" required>
-        <div class="text-danger" ng-if="oauthForm.name.$invalid && (oauthForm.name.$dirty || oauthForm.$submitted)" data-ng-bind="Name is required"></div>
+        <div class="text-danger" ng-if="oauthForm.name.$invalid && (oauthForm.name.$dirty || oauthForm.$submitted)">Name is required</div>
         <p class="help-block">A descriptive name used by the OAuth AS</p>
       </div>
     </div>
