--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -68,8 +68,8 @@
           OAuth token to call an API. Kong will
           obtain an UMA permission ticket, and attempt
           to obtain an RPT on behalf of the client.
-          Client can send pushed claims using header
-          <code>UMA_PUSHED_CLAIMS</code> with JSON in
+          Client can send pushed claims using the
+          <code>UMA_PUSHED_CLAIMS</code> header with JSON in
           the following format:
           <code>
             {"claim_token":"...","claim_token_format":"..."}
@@ -86,7 +86,7 @@
         <input bs-switch ng-model="data.allow_unprotected_path" switch-size="small" type="radio" switch-on-text="Allow"
                switch-off-text="Deny">
         <p class="help-block">
-          What to do when path is not protected by UMA-RS? If Deny then RS returns 401/Unauthorized.
+          What to do when the path is not protected by UMA-RS? If <code>Deny</code> then RS returns 401/Unauthorized.
         </p>
       </div>
     </div>
@@ -132,7 +132,7 @@
         <input bs-switch ng-model="data.show_consumer_custom_id" switch-size="small" type="radio" switch-on-text="Yes"
                switch-off-text="No">
         <p class="help-block">
-          If <code>Yes</code>, then the plugin will set consumer custom id in legacy header otherwise not.
+          If <code>Yes</code>, then the plugin will set consumer custom id in the legacy header, otherwise not.
         </p>
       </div>
     </div>
@@ -153,8 +153,8 @@
       </em></label>
       <div class="col-sm-7">
         <input ng-model="data.oxd_id" class="form-control">
-        <p class="help-block">If you have existing oxd entry then enter oxd_id(also client id, client secret and client id of oxd id). If you
-          have client created from OP server then skip it and enter only below client_id and client_secret. <code>If you skip all three fields (oxd_id, client_id and client_secret), then it will create a new client for you.</code></p>
+        <p class="help-block">If you have an existing oxd entry then, enter the oxd_id(also client id, client secret and client id of oxd id). If you a
+          have client created from OP server, skip it and enter only the client_id and client_secret below. <code>If you skip all the three fields (oxd_id, client_id and client_secret), then it will create a new client for you.</code></p>
       </div>
     </div>
 
@@ -164,7 +164,7 @@
       </em></label>
       <div class="col-sm-7">
         <input ng-model="data.client_id" class="form-control">
-        <p class="help-block">If you have existing client then add value in Client Id and Client Secret.</p>
+        <p class="help-block">If you have an existing client, add the value in Client Id and Client Secret.</p>
       </div>
     </div>
     <!-- In add mode -->
@@ -174,7 +174,7 @@
       </em></label>
       <div class="col-sm-7">
         <input ng-model="data.client_secret" class="form-control">
-        <p class="help-block">If you have existing client then add value in Client Id and Client Secret.</p>
+        <p class="help-block">If you have an existing client, add the value in Client Id and Client Secret.</p>
       </div>
     </div>
     <!-- In edit mode -->
