--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -153,8 +153,8 @@
       </em></label>
       <div class="col-sm-7">
         <input ng-model="data.oxd_id" class="form-control">
-        <p class="help-block">If you have an existing oxd entry, enter the oxd_id(also client id, client secret and client id of oxd id). If you a
-          have client created from the OP server, skip it and enter only the client_id and client_secret below. <code>If you skip all the four fields (oxd_id, client_id, client_secret and  client_id_of_oxd_id), then it will create a new client for you.</code></p>
+        <p class="help-block">If you have an existing oxd entry, enter the oxd_id(also client id, client secret and client id of oxd id). If you
+          have a client created from the OP server, skip it and enter only the client_id and client_secret below. <code>If you skip all the four fields (oxd_id, client_id, client_secret and  client_id_of_oxd_id), then it will create a new client for you.</code></p>
       </div>
     </div>
 
