Show setup client oxd id #168

--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -154,7 +154,27 @@
       <div class="col-sm-7">
         <input ng-model="data.oxd_id" class="form-control">
         <p class="help-block">If you have an existing oxd entry, enter the oxd_id(also client id, client secret and client id of oxd id). If you
-          have a client created from the OP server, skip it and enter only the client_id and client_secret below. <code>If you skip all the four fields (oxd_id, client_id, client_secret and  client_id_of_oxd_id), then it will create a new client for you.</code></p>
+          have a client created from the OP server, skip it and enter only the client_id and client_secret below. <code>If you skip all the five fields (oxd_id, setup_client_oxd_id, client_id, client_secret and  client_id_of_oxd_id), then it will create a new client for you.</code></p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Client Id of OXD Id<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="data.client_id_of_oxd_id" class="form-control">
+        <p class="help-block">If you have an existing oxd id, add value in Client Id of oxd id.</p>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Setup client OXD Id<br><em>
+        <small class="help-block">optional</small>
+      </em></label>
+      <div class="col-sm-7">
+        <input ng-model="data.setup_client_oxd_id" class="form-control">
+        <p class="help-block">If you have an existing oxd id, add value in Setup client OXD Id.</p>
       </div>
     </div>
 
@@ -184,17 +204,7 @@
       </em></label>
       <div class="col-sm-7">
         <input ng-model="edit_client_secret" class="form-control">
-        <p class="help-block">If you enter new client secret then it will update with given value.</p>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-4 control-label">Client Id of OXD Id<br><em>
-        <small class="help-block">optional</small>
-      </em></label>
-      <div class="col-sm-7">
-        <input ng-model="data.client_id_of_oxd_id" class="form-control">
-        <p class="help-block">If you have existing oxd id then add value in Client Id of oxd id.</p>
+        <p class="help-block">If you enter new client secret, it will update with given value.</p>
       </div>
     </div>
 
