--- a/konga/assets/js/app/dashboard/dashboard.html
+++ b/konga/assets/js/app/dashboard/dashboard.html
@@ -126,48 +126,70 @@
       </div>
     </div>
   </div>
-  <div class="row actions">
-    <div class="col-md-12">
-      <list-search
-        class="pull-right"
-        data-filters="filters"
-        data-options="[10, 20]"
-        data-items="itemsPerPage">
-      </list-search>
-    </div>
-  </div>
+
   <div class="row">
-    <div class="col-md-12 table-responsive">
-      <table class="table table-bordered">
-        <thead>
-        <tr>
-          <th width="350px">Name</th>
-          <th width="200px">OXD Id / Client Id of OXD Id</th>
-          <th width="100px">Setup client OXD Id / Client Id</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr
-          dir-paginate="o in credentials | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage">
-          <td>{{o.name}}</td>
-          <td data-ng-if="!!o.config" data-ng-class="{'trueColorTd': o.isOXDIdTrue}">{{o.config.oxd_id}} <br/>
-            {{o.config.client_id_of_oxd_id}}
-          </td>
-          <td data-ng-if="!!o.config" data-ng-class="{'trueColorTd': o.isSetupOXDIdTrue}">
-            {{o.config.setup_client_oxd_id}} <br/> {{o.config.client_id}}
-          </td>
-          <td data-ng-if="!o.config" data-ng-class="{'trueColorTd': o.isOXDIdTrue}">{{o.oxd_id}} <br/>
-            {{o.client_id_of_oxd_id}}
-          </td>
-          <td data-ng-if="!o.config" data-ng-class="{'trueColorTd': o.isSetupOXDIdTrue}">{{o.setup_client_oxd_id}} <br/>
-            {{o.client_id}}
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="col-md-12" style="margin-bottom: 10px;">
-      <dir-pagination-controls></dir-pagination-controls>
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="panel-title">
+            <i class="mdi mdi-information-outline"></i>&nbsp;CLIENTS INFO
+          </div>
+        </div>
+        <div class="panel-body">
+          <div class="col-md-12">
+            <span class="pull-left"> Note: <span style="background: #d4f7d4; border: 1px solid;">__</span> The highlighted area shows your active clients.</span>
+            <list-search
+              class="pull-right"
+              data-filters="filters"
+              data-options="[10, 20]"
+              data-items="itemsPerPage">
+            </list-search>
+          </div>
+          <div class="col-md-12 table-responsive">
+            <table class="table no-margin">
+              <thead>
+              <tr>
+                <th width="350px">Name</th>
+                <th width="200px">OXD Id / Client Id of OXD Id</th>
+                <th width="100px">Setup client OXD Id / Client Id</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr data-ng-if="!oxdLoading"
+                  dir-paginate="o in credentials | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage">
+                <td>{{o.name}}</td>
+                <td data-ng-if="!!o.config" data-ng-class="{'trueColorTd': o.isOXDIdTrue}">{{o.config.oxd_id}} <br/>
+                  {{o.config.client_id_of_oxd_id}}
+                </td>
+                <td data-ng-if="!!o.config" data-ng-class="{'trueColorTd': o.isSetupOXDIdTrue}">
+                  {{o.config.setup_client_oxd_id}} <br/> {{o.config.client_id}}
+                </td>
+                <td data-ng-if="!o.config" data-ng-class="{'trueColorTd': o.isOXDIdTrue}">{{o.oxd_id}} <br/>
+                  {{o.client_id_of_oxd_id}}
+                </td>
+                <td data-ng-if="!o.config" data-ng-class="{'trueColorTd': o.isSetupOXDIdTrue}">{{o.setup_client_oxd_id}}
+                  <br/>
+                  {{o.client_id}}
+                </td>
+              </tr>
+              <tr data-ng-if="credentials.length == 0 && !oxdLoading">
+                <td colspan="5">
+                  No records found
+                </td>
+              </tr>
+              <tr data-ng-if="oxdLoading">
+                <td colspan="5">
+                  <konga-loader message="Loading... Please wait.."></konga-loader>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-md-12" style="margin-bottom: 10px;">
+            <dir-pagination-controls></dir-pagination-controls>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
