--- a/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
+++ b/konga/assets/js/app/consumers/credentials/create-oauth2-modal.html
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" data-ng-show="(data.oauth_mode ? true: false)">
       <label class="col-sm-4 control-label">OAuth scope security<br><em>
         <small class="help-block">optional</small>
       </em></label>
