--- a/konga/assets/js/app/consumers/index.html
+++ b/konga/assets/js/app/consumers/index.html
@@ -7,12 +7,10 @@
         <i class="mdi mdi-plus"></i>
         Create consumer
       </button>
-      <!--<button-->
-        <!--ng-if="user.hasPermission($state.name.split('.')[0],'create')"-->
-        <!--class="btn btn-warning" ng-click="importConsumers()" data-ng-disabled="importClick">-->
-        <!--<i class="mdi mdi-upload"><i class="material-icons"></i></i>-->
-        <!--Import-->
-      <!--</button>-->
+      <button class="btn btn-warning" ng-click="openCreateClientModal()">
+        <i class="mdi mdi-plus"><i class="material-icons"></i></i>
+        Create Client
+      </button>
     </div>
     <list-search
       class="pull-right"
@@ -31,29 +29,24 @@
       <table class="table table-hover table-striped">
         <tr>
           <th width="{{item.width}}" class="text-nowrap" ng-if="!item.hide"
-              data-ng-repeat="item in titleItems | filter:titleFilter"
-          >
+              data-ng-repeat="item in titleItems | filter:titleFilter">
             <a
               class="clickable"
               data-ng-show="item.column"
               data-ng-click="changeSort(item)"
-              data-ng-bind-html="item.title.toUpperCase()"
-            ></a>
+              data-ng-bind-html="item.title.toUpperCase()"></a>
             <span
               data-ng-show="!item.column"
-              data-ng-bind-html="item.title.toUpperCase()"
-            ></span>
+              data-ng-bind-html="item.title.toUpperCase()"></span>
 
             <i class="mdi"
                data-ng-show="sort.column == item.column"
-               data-ng-class="{'mdi-chevron-down': !sort.direction, 'mdi-chevron-up': sort.direction}"
-            >
+               data-ng-class="{'mdi-chevron-down': !sort.direction, 'mdi-chevron-up': sort.direction}">
             </i>
           </th>
         </tr>
         <tr
           dir-paginate="consumer in items.data | orderBy:sort.column:sort.direction | filter : filters.searchWord | itemsPerPage: itemsPerPage">
-
           <td>
             <raw-view data-item="consumer"></raw-view>
           </td>
