Remove browser validation #176

--- a/konga/assets/js/app/settings/index.html
+++ b/konga/assets/js/app/settings/index.html
@@ -1,4 +1,4 @@
-<form name="applicationSettingsForm" ng-submit="updateKongaSettings(applicationSettingsForm.$valid)">
+<form name="applicationSettingsForm" novalidate ng-submit="updateKongaSettings(applicationSettingsForm.$valid)">
   <!-- GENERAL SETTINGS -->
   <div class="row">
     <div class="col-md-12">
